# GLM

./: .gitignore  README.md  dvc.yaml  license  params.yaml  pyproject.toml
src/glm/: 2detect.dvc  __init__.py  dataset.py  datasets.dvc  dvc.yaml  install_test.py  main.py  preprocess_2detect.py  preprocess_2detect_demo.py  pretrain.py  run_demo.py  train.py  utils.py
src/glm/datasets/processed/: .gitignore
src/glm/datasets/raw/2detect/slice00001/mode2/: dark.tif  flat1.tif  flat2.tif  segmentation.tif
src/glm/images/demo/: .gitignore
src/glm/models/: cnn.py  gnn.py  utils.py
src/glm/saved_models/: .gitignore
